tests/sumo/cf_model/errors/tau_below_stepsize/errors.sumo
Warning: Value of tau=0.5 in car following model 'carFollowing-Krauss' lower than simulation step size may cause collisions
Warning: Teleporting vehicle 'follower'; collision with vehicle 'leader', lane='end_0', gap=-0.96, time=59.00 stage=move.
Warning: Vehicle 'follower' ends teleporting on edge 'rend', time 59.00.
